# futronic-biometric-recognizer

./: CMakeLists.txt  fbr.pc.in  library.cpp
include/: Bozorth.h  Cwsq.h  Mindtct.h  Scanner.h  Utils.h  bmpmini.hpp  library.h
src/: Bozorth.cpp  Cwsq.cpp  Mindtct.cpp  Scanner.cpp  Utils.cpp
